	* Fixed a bug in Http.weather that would cause an ugly error
	message for a command like "weather hell".
	
	* Added the number of strings to the Fun.object output.
	
	* Fixed bug in RSS.configure; no aliases could be added.
	
	* Changed Alias.freeze to Alias.lock.
	
	* Fixed sorting in Status' uptime database.
	
	* Updated the Gameknot tests for expired games, and updated the
	Gameknot plugin to handle such links in its snarfer.
	
	* Added a 'server' attribute to Irc objects to unify the way to
	access such information.
	
	* Added revision command for finding out the revision of the files
	in a running bot; also added __revision__ strings so CVS would be 
	happy to keep such information for us :)
	
	* Fixed bug #848475 -- bad error message from regexp-expecting
	commands.
	
	* Stopped listing the plugin dispatcher command in the list of
	commands for that plugin.
	
	* Fixed bug in Gameknot.gkstats when retrieving the stats for
	users who haven't yet played a game.
	
2003-11-18  Jeremy Fincher  <jemfinch@users.sf.net>

	* Changed commands so that plugins no longer have to make sure
	that their commands are unique within the bot.  Ambiguous commands
	will reply with an error message and instruct the user to
	disambiguate the command by prefixing with the appropriate plugin
	name.. Many commands that formerly contained the plugin name (or a
	portion thereof) have had it removed, and many plugins have had
	their names changed so prefixing a command with the plugin name is
	less bulky.  Rather than list each individual example, you can
	read the plugin documentation posted at ***TODO***

	* Renamed numerous plugins: OwnerCommands became Owner,
	AdminCommands became Admin, ChannelCommands became Channel,
	MiscCommands became Misc, UserCommands became User, URLSnarfer
	became URL, Notes became Note, FunCommands became Fun, IMDB became
	Movies, and Aliases became Alias.

	* Made aliases persistent across reloads/bot restarts.  You should