@@ -111,6 +111,7 @@ class MiscTestCase(ChannelPluginTestCase, PluginDocumentation):
 
     def testTell(self):
         m = self.getMsg('tell foo [plugin tell]')
+        #debug.printf(repr(m))
         self.failUnless(m.args[0] == 'foo')
         self.failUnless('Misc' in m.args[1])
         m = self.getMsg('tell #foo [plugin tell]')
